src/objects/DonorApi__Gift_Credit__c.object
<CustomObject>
    <description>Summary of gifts</description>
    <fields>
        <fullName>DonorApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account (organization or household) receiving credit for the gift.</description>
        <inlineHelpText>The account (organization or household) receiving credit for the gift.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Credits</relationshipLabel>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Assignee__c</fullName>
        <description>**System Calculated** Link to the gift credit assignee record.</description>
        <formula>IF(ISPICKVAL(DonorApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Account__r.Id, DonorApi__Account__r.Name), IF(ISPICKVAL(DonorApi__Entity__c,&quot;Contact&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Contact__r.Id, DonorApi__Contact__r.FirstName &amp; &quot; &quot; &amp; DonorApi__Contact__r.LastName),HYPERLINK(&quot;/&quot; &amp; DonorApi__User__r.Id, DonorApi__User__r.FirstName &amp; &quot; &quot; &amp; DonorApi__User__r.LastName)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Link to the gift credit assignee record.</inlineHelpText>
        <label>Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact (individual person) receiving credit for the gift.</description>
        <inlineHelpText>The contact (individual person) receiving credit for the gift.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gift Credits</relationshipLabel>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Credit_Amount__c</fullName>
        <description>**Required** The amount of the gift credit.</description>
        <inlineHelpText>**Required** The amount of the gift credit.</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Credit_Sub_Type__c</fullName>
        <description>Select the credit sub type that describes the gift credit (if applicable). This determines the detailed type of gift credit the constituent receives.</description>
        <inlineHelpText>Select the credit sub type that describes the gift credit (if applicable). This determines the detailed type of gift credit the constituent receives.</inlineHelpText>
        <label>Credit Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DonorApi__Credit_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Donor-Advised Giving</fullName>
                </value>
                <value>
                    <fullName>General Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Matching Gift</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Workplace Giving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Credit_Type__c</fullName>
        <description>The type of credit assigned to the entity on the gift credit record. The standard types are hard, soft, and solicitor credit.</description>
        <inlineHelpText>The type of credit assigned to the entity on the gift credit record. The standard types are hard, soft, and solicitor credit.</inlineHelpText>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Solicitation Credit</fullName>
                </value>
                <value>
                    <fullName>Hard Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The date the constituent receives credit for the gift. This is typically the date the gift payment is processed.</description>
        <inlineHelpText>**Required** The date the constituent receives credit for the gift. This is typically the date the gift payment is processed.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Entity__c</fullName>
        <description>The entity to be given credit for the gift. Valid values are &quot;User&quot;, &quot;Account&quot;, or &quot;Contact&quot;.</description>
        <inlineHelpText>The entity to be given credit for the gift. Valid values are &quot;User&quot;, &quot;Account&quot;, or &quot;Contact&quot;.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Conditionally Required** Link to the related gift detail. Required for all credits except credits associated with Non-Cash Gifts.</description>
        <inlineHelpText>**Conditionally Required** Link to the related gift detail. Required for all credits except credits associated with Non-Cash Gifts.</inlineHelpText>
        <label>Gift Detail</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>Gift Credits</relationshipLabel>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related gift. Required for all credits except credits associated with Non-Cash Gifts.</description>
        <inlineHelpText>Link to the related gift. Required for all credits except credits associated with Non-Cash Gifts.</inlineHelpText>
        <label>Gift</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipLabel>Gift Credits</relationshipLabel>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Non_Cash_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related non-cash gift for the gift credit. Gift credits require either a gift or a non-cash gift to be assigned prior to saving.</description>
        <inlineHelpText>The related non-cash gift for the gift credit. Gift credits require either a gift or a non-cash gift to be assigned prior to saving.</inlineHelpText>
        <label>Non-Cash Gift</label>
        <referenceTo>DonorApi__Gift_In_Kind__c</referenceTo>
        <relationshipLabel>Gift Credits</relationshipLabel>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the credit to user in the system. The user is typically the solicitor.</description>
        <inlineHelpText>Relates the credit to user in the system. The user is typically the solicitor.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gift Credit</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Gift Credit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>